--- a/src/index.css
+++ b/src/index.css
@@ -1,47 +1,84 @@
 @import url('https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:300,400,700');
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i');
 @import 'css/bootstrap-grid.min.css';
-
 body {
     margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
 }
 
-h1, h2, h3, h4, h5, h6, h7{
-  font-weight: 300;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+h7 {
+    font-weight: 300;
 }
+
 h1 {
-  font-size: 3em;
+    font-size: 3em;
 }
 
-.text-center{
-  text-align: center;
+.text-center {
+    text-align: center;
 }
 
-.row-spaced{
-  margin-top: 20px;
-  margin-bottom: 20px;
+.row-spaced {
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
-.img-circle{
-  border-radius: 50%;
+.img-circle {
+    border-radius: 50%;
 }
 
-.paper-padded{
-  padding: 30px;
+.paper-padded {
+    padding: 30px;
 }
-.body-copy{
-  max-width: 500px;
+
+.body-copy {
+    max-width: 500px;
 }
-.faded{
-  opacity: 0.7;
+
+.faded {
+    opacity: 0.7;
 }
-.project-icon{
-  width: 1.5em;
-  height: 1.5em;
-  position: relative;
-  bottom: 3px;
-  padding: 1px;
-  margin-right: 5px;
+
+.project-icon {
+    width: 1.5em;
+    height: 1.5em;
+    position: relative;
+    bottom: 3px;
+    padding: 1px;
+    margin-right: 5px;
+}
+
+.project-screenshot {
+    height: auto;
+    width: auto;
+    max-width: 100%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    transition: max-width 0.5s ease;
+    transition-delay: 0.5s;
+}
+
+.screenshot-paper {
+    align-content: center;
+}
+
+.paper {
+    max-width: calc(100vw - 20px);
+}
+
+@media only screen and (max-width: 992px) {
+
+    .project-screenshot {
+      max-width: 0px;
+      display: block;
+      transition: max-width 0.5s ease;
+  }
 }
