--- a/src/index.css
+++ b/src/index.css
@@ -35,6 +35,37 @@ h1 {
     overflow: hidden;
 }
 
+a{
+    color: #4DA3FF;
+    font-weight: 400;
+    text-decoration: none;
+}
+
+a:hover{
+    color: #0056b3;
+    text-decoration: underline;
+}
+
+.navbar {
+    padding-top: 17px;
+}
+.no-select {
+    pointer-events: none;
+    -webkit-touch-callout: none;
+    /* iOS Safari */
+    -webkit-user-select: none;
+    /* Safari */
+    -khtml-user-select: none;
+    /* Konqueror HTML */
+    -moz-user-select: none;
+    /* Firefox */
+    -ms-user-select: none;
+    /* Internet Explorer/Edge */
+    user-select: none;
+    /* Non-prefixed version, currently
+                                  supported by Chrome and Opera */
+}
+
 .text-center {
     text-align: center;
 }
@@ -44,10 +75,11 @@ h1 {
     margin-bottom: 20px;
 }
 
-.img-center-wrapper{
+.img-center-wrapper {
     max-width: 200px;
     width: 50%;
 }
+
 .img-circle {
     border-radius: 50%;
 }
@@ -97,7 +129,7 @@ h1 {
     padding-bottom: 150px;
 }
 
-.container-padded{
+.container-padded {
     padding-top: 75px;
     padding-bottom: 150px;
 }
