--- a/src/index.css
+++ b/src/index.css
@@ -67,6 +67,10 @@ a:hover {
                                   supported by Chrome and Opera */
 }
 
+.btn-spaced {
+    margin: 12px;
+}
+
 .text-center {
     text-align: center;
 }
