--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,15 @@
 @import url('https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:300,400,700');
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i');
-@import 'css/bootstrap-grid.min.css';
+
+@import '_vars.scss';
+@import '_scrollbar.scss';
+@import '_layout.scss';
+/*
+**************************************
+*BASIC ELEMENT STYLES AND UTIL CLASSES
+**************************************
+*/
+
 body {
     margin: 0;
     padding: 0;
@@ -56,76 +65,6 @@ a:hover {
 
 .float-right {
     float: right;
-}
-
-/*
-**************************************
-******CUSTOM SCROLLBAR****************
-**************************************
-*/
-
-*::-webkit-scrollbar-track {
-    background: #FFF;
-}
-
-*::-webkit-scrollbar {
-    width: 15px;
-    background: #FFF;
-}
-
-*::-webkit-scrollbar-thumb {
-    background-color: #C1C1C1;
-}
-
-/*
-**************************************
-******LAYOUT UTILITIES****************
-**************************************
-*/
-
-.container {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-}
-
-.row {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-}
-
-.row.bottom {
-    margin-bottom: 100px;
-}
-
-.col {
-    display: flex;
-    flex-direction: column;
-}
-
-.row.centered,
-.col.centered {
-    justify-content: center;
-    align-items: center;
-}
-
-.row.right,
-.col.right {
-    justify-content: flex-end;
-    align-items: flex-end;
-}
-
-.row.left,
-.col.left {
-    justify-content: start;
-    align-items: start;
-}
-
-.row.padded,
-.col.padded {
-    padding: 15px;
 }
 
 /*
